# python-pro-dz-4

./: manage.py  pyproject.toml
pythonpro_dz_4/: asgi.py  settings.py  urls.py  wsgi.py
students/: models.py  services.py  urls.py  views.py
students/migrations/: 0001_initial.py
templates/: generate_student.html
templates/extends/: header.html
